# Calculator_QT

./: CMakeLists.txt  README.md
inc/: calculatormodel.h  view.h
src/: calculatormodel.cpp  main.cpp  view.cpp
